<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.team.links.Splashscreen">


    <TextView
        android:id="@+id/title"
        android:layout_width="148dp"
        android:layout_height="43dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="35dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="259dp"
        android:layout_height="45dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"

        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="39dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintHorizontal_bias="0.504" />

    <EditText
        android:id="@+id/password"
        android:layout_width="259dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginTop="52dp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/email" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="141dp"
        android:layout_height="21dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="25dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="@+id/password"
        app:layout_constraintRight_toRightOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:layout_editor_absoluteX="92dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="199dp"
        android:layout_height="45dp"
        android:text="@string/login"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/password"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/password" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="147dp"
        android:layout_height="46dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:text="@string/signup"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="@+id/login"
        app:layout_constraintRight_toRightOf="@+id/login"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />
</android.support.constraint.ConstraintLayout>
