<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.team.links.SignUp">

    <TextView
        android:id="@+id/signup"
        android:layout_width="90dp"
        android:layout_height="42dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/signuptitle"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="259dp"
        android:layout_height="44dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/signup" />

    <EditText
        android:id="@+id/name"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/email"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/email"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/password"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/name"
        android:layout_marginRight="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintRight_toRightOf="@+id/name"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintHorizontal_bias="1.0" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="175dp"
        android:layout_height="52dp"
        android:text="@string/signuptitle"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/confirm_password"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/confirm_password"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

    <Button
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/name"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.496"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/password"
        android:layout_marginRight="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintRight_toRightOf="@+id/password"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday_date"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/name"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/name"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/name" />

</android.support.constraint.ConstraintLayout>
