<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.team.links.ForgotPassword">

    <TextView
        android:id="@+id/forgot_password_title"
        android:layout_width="161dp"
        android:layout_height="39dp"
        android:text="@string/forgot_password_title"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginTop="38dp"
        android:text="Description"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_title"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        app:layout_constraintLeft_toLeftOf="@+id/description"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/description"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/description"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/send_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_email"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/email"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/email" />
</android.support.constraint.ConstraintLayout>
